--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,33 @@ jobs:
       - name: Build
         run: |
           python build_lib.py
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact
+          path: |
+            warp/bin/**/*.dll
+            warp/bin/**/*.so
+            warp/bin/**/*.dylib
+
+  test-warp:
+    runs-on: ubuntu-latest
+    needs: build-warp
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Download Warp build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifact
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade numpy
+          pip install .
+      - name: Run tests
+        run: python -m warp.tests
