--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
+          path: warp/bin/
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
