--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-warp
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           lfs: true
@@ -46,16 +46,22 @@ jobs:
         with:
           name: build-artifact
           path: warp/bin/
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade numpy coverage[toml] usd-core
           pip install .
-      - name: Run tests
+      - name: Run Tests
         run: python -m warp.tests --junit-report-xml rspec.xml --coverage --coverage-xml coverage.xml -s autodetect
       - name: Test Summary
         uses: test-summary/action@v2
         with:
           paths: "rspec.xml"
-          show: "fail, skip"
+          show: "all"
+        if: always()
+      - name: Upload Test Summary
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-summary
+          path: test-summary.md
         if: always()
