--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   build-warp:
     runs-on: ubuntu-latest
+    container:
+      image: nvcr.io/nvidia/cuda:11.6.1-devel-ubuntu20.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
