--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,6 @@ on:
 jobs:
   build-warp:
     runs-on: ubuntu-latest
-    container:
-      image: nvcr.io/nvidia/cuda:11.6.1-devel-ubuntu20.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,7 +19,7 @@ jobs:
           pip install --upgrade numpy
       - name: Build
         run: |
-          python build_lib.py
+          tools/ci/building/build-linux-x86_64/build.sh
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
