--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
           pip install --upgrade numpy
       - name: Build
         run: |
+          g++ --version
           tools/ci/building/build-linux-x86_64/build.sh --no-docker
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
