--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Build
         run: |
           g++ --version
-          apt-get update
-          apt-get install gcc-9 g++-9
-          update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 --slave /usr/bin/g++ g++ /usr/bin/g++-9
-          update-alternatives --set gcc /usr/bin/gcc-9
-          update-alternatives --set g++ /usr/bin/g++-9
+          sudo apt-get update
+          sudo apt-get install gcc-9 g++-9
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 --slave /usr/bin/g++ g++ /usr/bin/g++-9
+          sudo update-alternatives --set gcc /usr/bin/gcc-9
+          sudo update-alternatives --set g++ /usr/bin/g++-9
           g++ --version
           tools/ci/building/build-linux-x86_64/build.sh --no-docker
       - name: Upload build artifact
