--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
           g++ --version
           sudo apt-get update
           sudo apt-get install gcc-9 g++-9
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 90
           sudo update-alternatives --set gcc /usr/bin/gcc-9
           sudo update-alternatives --set g++ /usr/bin/g++-9
           g++ --version
