--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,8 @@ jobs:
         run: |
           g++ --version
           sudo apt-get update
-          sudo apt-get install gcc-9 g++-9
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90
+          sudo apt-get install g++-9
           sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 90
-          sudo update-alternatives --set gcc /usr/bin/gcc-9
           sudo update-alternatives --set g++ /usr/bin/g++-9
           g++ --version
           tools/ci/building/build-linux-x86_64/build.sh --no-docker
