--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,12 @@ jobs:
         run: |
           g++ --version
           sudo apt-get update
-          sudo apt-get install g++-9
+          sudo apt-get install gcc-9 g++-9
           sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 90
           sudo update-alternatives --set g++ /usr/bin/g++-9
           g++ --version
-          tools/ci/building/build-linux-x86_64/build.sh --no-docker
+          tools/packman/packman install -l _build/target-deps/cuda cuda 11.8.0_520.61-d8963068-linux-x86_64
+          python build_lib.py --cuda_path=_build/target-deps/cuda
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
