--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,31 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-warp:
+  build-warp-windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade numpy
+      - name: Build
+        run: |
+          tools/packman/packman install -l _build/target-deps/cuda cuda 11.8.0_522.06-abe3d9d7-windows-x86_64
+          python build_lib.py --cuda_path=_build/target-deps/cuda
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact-windows
+          path: |
+            warp/bin/**/*.dll
+
+  build-warp-ubuntu:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -28,15 +52,14 @@ jobs:
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build-artifact
+          name: build-artifact-ubuntu
           path: |
-            warp/bin/**/*.dll
             warp/bin/**/*.so
             warp/bin/**/*.dylib
 
-  test-warp:
-    runs-on: ubuntu-latest
-    needs: build-warp
+  test-warp-windows:
+    runs-on: windows-latest
+    needs: build-warp-windows
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -49,7 +72,7 @@ jobs:
       - name: Download Warp build artifact
         uses: actions/download-artifact@v4
         with:
-          name: build-artifact
+          name: build-artifact-windows
           path: warp/bin/
       - name: Install Dependencies
         run: |
@@ -57,7 +80,32 @@ jobs:
           pip install --upgrade numpy coverage[toml] usd-core
           pip install .
       - name: Run Tests
-        run: python -m warp.tests --junit-report-xml rspec.xml --coverage --coverage-xml coverage.xml -s autodetect
+        run: python -m warp.tests --junit-report-xml rspec.xml -s autodetect
+
+  test-warp-ubuntu:
+    runs-on: ubuntu-latest
+    needs: build-warp-ubuntu
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          lfs: true
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Download Warp build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifact-ubuntu
+          path: warp/bin/
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade numpy coverage[toml] usd-core
+          pip install .
+      - name: Run Tests
+        run: python -m warp.tests --junit-report-xml rspec.xml -s autodetect
       - name: Test Summary
         uses: test-summary/action@v2.3
         with:
@@ -71,5 +119,4 @@ jobs:
           path: |
             test-summary.md
             rspec.xml
-            coverage.xml
         if: always()
