--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: Build Warp
 
 on:
   push:
+  workflow_call:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -144,3 +145,28 @@ jobs:
             test-summary.md
             rspec.xml
         if: always()
+
+  test-warp-macos:
+    runs-on: macos-latest
+    needs: build-warp-macos
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          lfs: true
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Download Warp build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifact-macos
+          path: warp/bin/
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade numpy coverage[toml] usd-core
+          pip install .
+      - name: Run Tests
+        run: python -m warp.tests --junit-report-xml rspec.xml -s autodetect
