--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Warp
+name: Build and Test Warp
 
 on:
   push:
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -43,6 +45,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -72,6 +76,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -112,7 +118,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade numpy coverage[toml] usd-core
-          pip install ./dist/*.whl
+          $wheel = Get-ChildItem -Path ./dist -Filter "*.whl" | Select-Object -First 1
+          pip install $wheel.FullName
       - name: Run Tests
         run: python -m warp.tests --junit-report-xml rspec.xml -s autodetect
       - name: Test Summary
