--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,10 +19,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade numpy build
+          tools/packman/packman install -l _build/target-deps/cuda cuda 11.8.0_522.06-abe3d9d7-windows-x86_64
+          tools/packman/packman install -l _build/host-deps/msvc msvc 2019-16.11.24
+          tools/packman/packman install -l _build/host-deps/winsdk winsdk 10.17763
       - name: Build
         run: |
-          tools/packman/packman install -l _build/target-deps/cuda cuda 11.8.0_522.06-abe3d9d7-windows-x86_64
-          python build_lib.py --cuda_path=_build/target-deps/cuda
+          python build_lib.py --cuda_path=_build/target-deps/cuda --msvc_path=_build/host-deps/msvc/VC/Tools/MSVC/14.29.30133 --sdk_path=_build/host-deps/winsdk
       - name: Build Wheel
         run: |
           mkdir -p warp/bin/windows-x86_64
