--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -102,6 +102,10 @@ jobs:
     runs-on: windows-latest
     needs: build-warp-windows
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -130,6 +134,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-warp-ubuntu
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -160,6 +168,10 @@ jobs:
       OS: macos-latest
       PYTHON_VERSION: 3.11
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
