--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,24 +18,18 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade numpy build
+          pip install --upgrade numpy
           tools/packman/packman install -l _build/target-deps/cuda cuda 11.8.0_522.06-abe3d9d7-windows-x86_64
           tools/packman/packman install -l _build/host-deps/msvc msvc 2019-16.11.24
           tools/packman/packman install -l _build/host-deps/winsdk winsdk 10.17763
       - name: Build
         run: |
           python build_lib.py --cuda_path=_build/target-deps/cuda --msvc_path=_build/host-deps/msvc/VC/Tools/MSVC/14.29.30133 --sdk_path=_build/host-deps/winsdk
-      - name: Build Wheel
-        run: |
-          mkdir -p warp/bin/windows-x86_64
-          mv warp/bin/warp.dll warp/bin/windows-x86_64/
-          mv warp/bin/warp-clang.dll warp/bin/windows-x86_64/
-          python -m build --wheel -C--build-option=-Pwindows-x86_64
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: build-artifact-windows
-          path: ./dist/*.whl
+          path: ./warp/bin/
 
   build-warp-ubuntu:
     runs-on: ubuntu-latest
@@ -51,22 +45,16 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade numpy build
+          pip install --upgrade numpy
       - name: Build Warp
         run: |
           tools/packman/packman install -l _build/target-deps/cuda cuda 11.8.0_520.61-d8963068-linux-x86_64
           python build_lib.py --cuda_path=_build/target-deps/cuda
-      - name: Build Wheel
-        run: |
-          mkdir -p warp/bin/linux-x86_64
-          mv warp/bin/warp.so warp/bin/linux-x86_64
-          mv warp/bin/warp-clang.so warp/bin/linux-x86_64
-          python -m build --wheel -C--build-option=-Plinux-x86_64
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: build-artifact-ubuntu
-          path: ./dist/*.whl
+          path: ./warp/bin/
 
   build-warp-macos:
     runs-on: macos-latest
@@ -82,21 +70,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade numpy build
+          pip install --upgrade numpy
       - name: Build
         run: |
           python build_lib.py
-      - name: Build Wheel
-        run: |
-          mkdir -p warp/bin/macos-universal
-          mv warp/bin/libwarp.dylib warp/bin/macos-universal/
-          mv warp/bin/libwarp-clang.dylib warp/bin/macos-universal/
-          python -m build --wheel -C--build-option=-Pmacos-universal
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: build-artifact-macos
-          path: ./dist/*.whl
+          path: ./warp/bin/
 
   test-warp-windows:
     runs-on: windows-latest
@@ -114,13 +96,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifact-windows
-          path: ./dist/
+          path: ./warp/bin/
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade numpy coverage[toml] usd-core
-          $wheel = Get-ChildItem -Path ./dist -Filter "*.whl" | Select-Object -First 1
-          pip install $wheel.FullName
+          pip install .
       - name: Run Tests
         run: python -m warp.tests --junit-report-xml rspec.xml --coverage --coverage-xml coverage.xml -s autodetect
       - name: Test Summary
@@ -146,12 +127,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifact-ubuntu
-          path: ./dist/
+          path: ./warp/bin/
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade numpy coverage[toml] usd-core
-          pip install ./dist/*.whl
+          pip install .
       - name: Run Tests
         run: python -m warp.tests --junit-report-xml rspec.xml --coverage --coverage-xml coverage.xml -s autodetect
       - name: Test Summary
@@ -180,12 +161,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifact-macos
-          path: ./dist/
+          path: ./warp/bin/
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install --upgrade numpy coverage[toml] usd-core
-          pip install ./dist/*.whl
+          pip install .
       - name: Run Tests
         run: python -m warp.tests --junit-report-xml rspec.xml --coverage --coverage-xml coverage.xml -s autodetect
       - name: Test Summary
