--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,3 +13,5 @@ concurrency:
 jobs:
   build-and-test:
     uses: ./.github/workflows/build-and-test.yml
+    secrets:
+      access-token: ${{ secrets.CODECOV_TOKEN }}
