--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "gh-workflow-expts" ]
   schedule:
     - cron: '37 10 * * 3'
+  workflow_dispatch:
 
 env:
   PYTHON_VERSION: 3.11
