--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -10,6 +10,15 @@ name: Build and Test Warp
 on:
   workflow_call:
   workflow_dispatch:
+  push:
+    tags:
+      - v*
+    branches:
+      - main
+      - release-*
+      - gh-workflow-expts
+  schedule: # Schedule workflow only runs on the default branch
+    - cron: "45 9 * * *"
 
 env:
   PYTHON_VERSION: 3.11
@@ -29,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade numpy
+          pip install --no-cache-dir --upgrade numpy
           tools/packman/packman install -l _build/target-deps/cuda cuda 11.8.0_522.06-abe3d9d7-windows-x86_64
           tools/packman/packman install -l _build/host-deps/msvc msvc 2019-16.11.24
           tools/packman/packman install -l _build/host-deps/winsdk winsdk 10.17763
@@ -56,7 +65,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade numpy
+          pip install --no-cache-dir --upgrade numpy
       - name: Build Warp
         run: |
           tools/packman/packman install -l _build/target-deps/cuda cuda 11.8.0_520.61-d8963068-linux-x86_64
@@ -81,7 +90,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade numpy
+          pip install --no-cache-dir --upgrade numpy
       - name: Build
         run: |
           python build_lib.py
@@ -113,8 +122,8 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade numpy coverage[toml] usd-core
-          pip install .
+          pip install --no-cache-dir --upgrade numpy coverage[toml] usd-core
+          pip install --no-cache-dir .
       - name: Run Tests
         run: python -m warp.tests --junit-report-xml rspec.xml --coverage --coverage-xml coverage.xml -s autodetect
       - name: Test Summary
@@ -153,8 +162,8 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade numpy coverage[toml] usd-core
-          pip install .
+          pip install --no-cache-dir --upgrade numpy coverage[toml] usd-core
+          pip install --no-cache-dir .
       - name: Run Tests
         run: python -m warp.tests --junit-report-xml rspec.xml --coverage --coverage-xml coverage.xml -s autodetect
       - name: Test Summary
@@ -193,8 +202,8 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade numpy coverage[toml] usd-core
-          pip install .
+          pip install --no-cache-dir --upgrade numpy coverage[toml] usd-core
+          pip install --no-cache-dir .
       - name: Run Tests
         run: python -m warp.tests --junit-report-xml rspec.xml --coverage --coverage-xml coverage.xml -s autodetect
       - name: Test Summary
