--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -232,6 +232,7 @@ jobs:
 
   pull-request-docs:
     runs-on: ubuntu-latest
+    needs: build-warp-ubuntu
     if: ${{ github.event_name == 'pull_request' }}
     outputs:
       artifact-url: ${{ steps.build-docs-output.outputs.artifact-url }}
@@ -242,10 +243,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+      - name: Download Warp binaries
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifact-ubuntu
+          path: warp/bin/
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r docs/requirements.txt
+          pip install --no-cache-dir -r docs/requirements.txt
       - name: Build Sphinx documentation
         run: python build_docs.py
       - name: Upload artifacts
